fix notelist overflow

--- a/src/sass/listnote.scss
+++ b/src/sass/listnote.scss
@@ -1,6 +1,9 @@
 .listnote {
-  margin-top: 5rem;
-  margin-bottom: 10rem;
+  padding-top: 5rem;
+  padding-bottom: 6rem;
+  @media screen and (min-width: 1020px) {
+    padding-bottom: 10rem;
+  }
   p {
     text-align: center;
     margin: 2rem 0;
