--- a/src/sass/newnote.scss
+++ b/src/sass/newnote.scss
@@ -3,11 +3,14 @@
   position: fixed;
   bottom: 0;
   padding: 1rem 0;
-  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
-  // left: 50%;
+  left: 35%;
+  @media screen and (min-width: 1020px) {
+    background-color: white;
+    left: 0;
+  }
   // transform: translate(-50%, -50%);
   button {
     cursor: pointer;
